# obelisk-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
src/obelisk/: __init__.py  __main__.py  commits.py  common_args.py  filtering.py  git.py  json_utils.py  main.py  manifest.py  rich_console.py  scanner.py
src/obelisk/cmd_utils/: apply_import.py  common_args.py  input_utils.py
src/obelisk/commands/: add_files.py  hello.py  live_import.py  update_manifest.py
src/obelisk/filetypes/: __init__.py  binary.py  json.py
tests/: conftest.py  smoke_test.py
tests/data/: input1.json  input2.json  manifest1.json
tests/integration/: test_add_files.py  test_live_import.py  test_update_manifest.py
tests/mocks/: files.py  git.py
tests/unit/: test_commits.py  test_git.py  test_json_utils.py  test_manifest_match.py  test_manifest_write.py  test_parse_manifest.py  test_scanner.py
tests/unit/filetypes/: test_binary.py  test_json.py
